--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "tailwindcss": "3.3.3",
