--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.4.15",
     "daisyui": "^4.4.6",
     "geist": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
