--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "geist": "^1.0.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
