--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
+    "cors": "^2.8.5",
     "daisyui": "^4.4.6",
+    "express": "^4.18.2",
     "geist": "^1.0.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "next-pwa": "^5.6.0",
+    "openai": "^4.24.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
