--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
   },
