--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "10.4.15",
     "cors": "^2.8.5",
     "daisyui": "^4.4.6",
