--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "daisyui": "^4.4.6",
     "express": "^4.18.2",
     "geist": "^1.0.0",
+    "jotai": "^2.6.2",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "next-pwa": "^5.6.0",
     "openai": "^4.24.1",
-    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
@@ -32,6 +32,8 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "postcss": "^8.4.33",
+    "postcss-reporter": "^7.1.0"
   }
 }
